@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               HTML-Template-Default
-version:            1.09
+version:            1.10
 abstract:           provide multiple template sources and use a default
 author:
     - Leo Charre leocharre at cpan dot org
@@ -11,8 +11,9 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Carp:            0
-    HTML::Template:  1.9
+    Carp:              0
+    HTML::Template:    1.9
+    LEOCHARRE::Debug:  0
 no_index:
     directory:
         - t
