@@ -1,3 +1,8 @@
+2009-09-25 09:12  cvs
+
+	* Makefile.PL, lib/HTML/Template/Default.pm, t/1-othernew.t: Fixed
+	  error with Makefile.PL dependency.
+
 2009-09-24 15:26  cvs
 
 	* HTML-Template-Default-1.01.tar.gz,
